--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css" media="screen">
+    <link rel="stylesheet" href="css/styles.css" media="screen">
     <title>Pong</title>
   </head>
   <body>
 
     <h1>Pong clone.</h1>
 
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <canvas id="canvas" width="800" height="600"></canvas>
 
-    <script src="" type="text/javascript">
-
-    </script>
+    <script src="js/scripts.js" type="text/javascript"></script>
   </body>
 </html>
